Revamped config manager and shader system. All new shaders. Initial shadow support for default world. Fix a couple of deadlocks.